@@ -1,6 +1,7 @@
 2004-07-12  Kalle Wallin <kaw@linux.se>
 	* options.c: fixed short option handling for multiple short options 
 	  at once (-abcde)
+	* conf.c: removed support for the old configuration syntax
 	
 2004-07-09  Kalle Wallin <kaw@linux.se>
 	* ncmpc-0.11.0 released (r1820)
